fix: fixedOverflowWidgets

--- a/playground/src/styles/main.css
+++ b/playground/src/styles/main.css
@@ -1,6 +1,1 @@
 @import '@unocss/reset/tailwind.css';
-
-.overflowingOverlayWidgets > *,
-.overflowingContentWidgets > * {
-  --at-apply: translate-y-22;
-}
